GBG overflow fix

--- a/src/styles/App.module.scss
+++ b/src/styles/App.module.scss
@@ -5,5 +5,6 @@
     flex-direction: column;
     align-items: center;
     zoom: 0.9;
+    overflow: hidden;
     @include for-desktop-medium-up { zoom: 1 }
 }
